<resources>
    <string name="app_name">BulletinBoard</string>
    <!--Menu Drawer Strings -->
    <string name="add_cat1">Объявления</string>
    <string name="add_my_ads">Мои объявления</string>
    <string name="add_car">Машины</string>
    <string name="add_pc">Компьютеры</string>
    <string name="add_smartphone">Смартфоны</string>
    <string name="add_dm">Бытовая техника</string>

    <string name="add_cat2">Аккаунт</string>
    <string name="add_sign_up">Регистрация</string>
    <string name="add_sign_in">Вход</string>
    <string name="add_sign_out">Выход</string>

    <string name="open">Открыто</string>
    <string name="close">Закрыто</string>

    <!--Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_done">На почту была отправлена ссылка для подтверждения</string>
    <!--Edit Activity -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Test text -->
    <string name="test_text_cars">Cars</string>
    <string name="test_text_cars_rus">Машины</string>
    <string name="test_text_pc">Personal Computers</string>
    <string name="test_text_pc_rus">Компьютеры</string>
    <string name="test_text_smartphone">Smartphone</string>
    <string name="test_text_smartphone_rus">Смартфоны</string>
    <string name="test_text_appliance">Appliances</string>
    <string name="test_text_appliance_rus">Бытовая техника</string>
    <string name="emailForRegistration">nahkampf-1990@mail.ru</string>
    <string name="textForTestBtnOpenMenu">Open Menu</string>
    <string name="passwordForRegistration">333666</string>
    <string name="testCountryInputText">China</string>
    <string name="testCitiesInputText">Shuhong</string>
    <string name="testCountryForScroll">Spain</string>
    <string name="testCitiesForScroll">Madrid</string>

</resources>