<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/threeLine">

    <item android:title="@string/add_cat1">
        <menu>
            <item
                android:title="@string/add_my_ads"
                android:id="@+id/id_my_ads"
                />
            <item
                android:title="@string/add_car"
                android:id="@+id/id_car"
                />
            <item
                android:title="@string/add_pc"
                android:id="@+id/id_pc"
                />
            <item
                android:title="@string/add_smartphone"
                android:id="@+id/id_smartpfone"
                />
            <item
                android:title="@string/add_dm"
                android:id="@+id/id_dm"
                />


        </menu>
    </item>


    <item android:title="@string/add_cat2">
        <menu>
            <item
                android:title="@string/add_sign_up"
                android:id="@+id/id_sign_up"
                />
            <item
                android:title="@string/add_sign_in"
                android:id="@+id/id_sign_in"
                />
            <item
                android:title="@string/add_sign_out"
                android:id="@+id/id_sign_out"
                />
        </menu>
    </item>


</menu>